added sprite, about, useSWG and first API endpoint

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,17 @@
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-body {
+p {
+  font-family: 'Open Sans', sans-serif;
+}
+
+
+h1,
+h2,
+h3 {
+  text-transform: capitalize;
   font-family: 'Poppins'
 }
 
