--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,24 @@
-* {
-  margin: 0;
-}
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
+* {
+  margin: 0;
+  max-width: 1440;
+}
+
+h4 {
+  color: #414141;
+}
+
+h4,
 p {
   font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+}
+
+td>p {
+  text-transform: capitalize;
+  font-size: 14px;
 }
 
 
@@ -14,10 +26,11 @@ h1,
 h2,
 h3 {
   text-transform: capitalize;
-  font-family: 'Poppins'
+  font-family: 'Poppins';
+  color: #414141;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h3 {
+  font-size: 24px;
+  font-weight: 500;
 }
